# AgenticDevopsCopilot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/agents/: graph.py  state.py
app/agents/nodes/: analysis.py  patch.py  risk.py
app/api/: endpoints.py
app/core/: config.py  llm.py
app/mcp_servers/: ci_inspector.py  k8s_validator.py  repo_parser.py
app/rag/: ingestion.py  qdrant.py  retrieval.py
