[project]
name = "agent-devops-copilot"
version = "0.1.0"
description = "Agentic DevOps Copilot using FastAPI, LangGraph, and Qdrant"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "langgraph>=0.0.26",
    "langchain>=0.1.12",
    "langchain-openai>=0.0.8",
    "qdrant-client>=1.8.0",
    "mcp>=0.1.0",
    "pydantic-settings>=2.2.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0"
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
